third_party/move/move-compiler-v2/tests/bytecode-generator/global_invalid.exp
// ---- Model Dump
module 0x42::m {
    private fun invalid<T>(addr: address) {
        if exists<T>(addr) {
          Tuple()
        } else {
          Abort(0)
        };
        {
          let _ = BorrowGlobal(Immutable)<T>(addr);
          MoveFrom<T>(addr);
          Tuple()
        }
    }
    spec fun $invalid<T>(addr: address);
} // end 0x42::m


Diagnostics:
error: Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found: '#0'
  ┌─ tests/bytecode-generator/global_invalid.move:4:17
  │
4 │         assert!(exists<T>(addr), 0);
  │                 ^^^^^^^^^^^^^^^
  │                 │
  │                 Invalid call to exists<#0>.

error: Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found: '#0'
  ┌─ tests/bytecode-generator/global_invalid.move:5:17
  │
5 │         let _ = borrow_global<T>(addr);
  │                 ^^^^^^^^^^^^^^^^^^^^^^
  │                 │
  │                 Invalid call to BorrowGlobal(Immutable)<#0>.

error: Expected a struct type. Global storage operations are restricted to struct types declared in the current module. Found: '#0'
  ┌─ tests/bytecode-generator/global_invalid.move:6:9
  │
6 │         move_from<T>(addr);
  │         ^^^^^^^^^^^^^^^^^^
  │         │
  │         Invalid call to MoveFrom<#0>.
